# openclaw-skills

skills/0xlucasliao/bnbchain-mcp/: _meta.json
skills/0xmevdad/openswarm-fight-club/: _meta.json
skills/0xrag/fund/: SKILL.md  _meta.json
skills/0xterrybit/binance-pay/: README.md  SKILL.md  _meta.json
skills/0xterrybit/email/: SKILL.md  _meta.json
skills/0xterrybit/kyberswap/: README.md  _meta.json
skills/0xterrybit/stripe/: _meta.json
skills/0xterrybit/transak/: _meta.json
skills/0xtommythomas-dev/soulflow/: _meta.json
skills/10e9928a/super-skills/: README.md  README_CN.md  SKILL.md  _meta.json
skills/10madh/linkedin-dm/: SKILL.md  _meta.json
skills/10xcoldleads/maton-gateway/: _meta.json
skills/1991513ccie-png/focus-music/: SKILL.md  _meta.json
skills/1991513ccie-png/packer-images/: _meta.json
skills/1991513ccie-png/podcast-editing/: _meta.json
skills/1991513ccie-png/portfolio-management/: SKILL.md  _meta.json
skills/1991513ccie-png/smart-contracts/: SKILL.md  _meta.json
skills/1991513ccie-png/website-scraper/: README.md  SKILL.md  _meta.json  manifest.json  plugin.py
skills/1999azzar/cloudflare-manager/: SKILL.md  _meta.json
skills/1999azzar/ui-designer-skill/: _meta.json
skills/1kalin/afrexai-business-continuity/: _meta.json
skills/1kalin/afrexai-contract-analyzer/: _meta.json
skills/1kalin/afrexai-onboarding/: README.md  SKILL.md  _meta.json
skills/1kalin/afrexai-proposal-gen/: README.md  SKILL.md  _meta.json
skills/1kalin/afrexai-swot-analyzer/: README.md  SKILL.md  _meta.json
skills/77darius77/memory-curator/: _meta.json
skills/801c07/molt-trader-skill/: README.md  SKILL.md  _meta.json  package-lock.json  package.json  tsconfig.json
skills/87marc/outlook-delegate/: _meta.json
skills/a-sumo/eywa/: SKILL.md  _meta.json  eywa-call.sh
skills/a638011/starlight-guild/: _meta.json
skills/aamish99/fundraiseup/: _meta.json
skills/aaron-he-zhu/content-refresher/: SKILL.md  _meta.json
skills/aaron-he-zhu/domain-authority-auditor/: SKILL.md  _meta.json
skills/aaron-he-zhu/internal-linking-optimizer/: SKILL.md  _meta.json
skills/aaron-he-zhu/memory-management/: _meta.json
skills/aaron-he-zhu/rank-tracker/: SKILL.md  _meta.json
skills/aaron-he-zhu/technical-seo-checker/: SKILL.md  _meta.json
skills/aaronfrancis635/static-network/: _meta.json  heartbeat.md  moderation.md  skill.md
skills/aaronn/openclaw-huckleberry-skill/: SKILL.md  _meta.json
skills/abdullah4ai/mckinsey-research/: README.md  SKILL.md  _meta.json
skills/abhi152003/maxxit-lazy-trading/: SKILL.md  _meta.json
skills/abishekdharshan/zerion-api-mcp/: README.md  SKILL.md  _meta.json
skills/adamkristopher/botcoin/: SKILL.md  _meta.json
skills/adboio/agentmail/: _meta.json
skills/adlai88/simmer-ai-divergence/: _meta.json
skills/adlai88/simmer-weather/: SKILL.md  _meta.json  weather_trader.py
skills/aetherstacey/erc8004-discover/: _meta.json
skills/aetherstacey/erc8004-reputation/: _meta.json
skills/agentandbot-design/agents-manager/: README.md  SKILL.md  _meta.json
skills/agentmilindu/zulk-short-url-skill/: README.md  SKILL.md  _meta.json
skills/agentossoftware/agentos/: SKILL.md  _meta.json
skills/aigentic-net/memory-search/: _meta.json
skills/aikarjal/wilma-triage/: SKILL.md  _meta.json
skills/aimlapihello/aiml-image-video/: README.md  SKILL.md  _meta.json  skill.json
skills/aj-dev-smith/clawtunes-social/: SKILL.md  _meta.json
skills/ajtgjmdjp/edinet-mcp/: SKILL.md  _meta.json
skills/akhmittra/ergocare-coach/: README.md  SKILL.md  _meta.json
skills/akhmittra/skill-security-auditor/: README.md  SKILL.md  _meta.json
skills/akshat-mishra101/wachai-mandates/: README.md  SKILL.md  _meta.json  requirements.txt
skills/alaa-eddine/pinescript-quant-analysis/: _meta.json  skill.md
skills/h8kxrfp68z-lgtm/icalendar-sync/: .clawhub.yaml  CLAWHUB_METADATA.yaml  DOCUMENTATION.md  README.md  REGISTRY.yaml  SKILL.md  _meta.json  clawhub.json  metadata.yaml  pyproject.toml  requirements.txt  setup.py  skill.yaml
skills/mainfraame/clawback/: CHANGELOG.md  README.md  SKILL.md  _meta.json  install.sh  pyproject.toml  setup.py  setup.sh
skills/mainfraame/clawback/src/clawback/: __init__.py  cli.py
skills/visionik/ouracli/: CHANGELOG.md  README.md  SKILL.md  Taskfile.yml  _meta.json  pyproject.toml
skills/visionik/ouracli/src/ouracli/: __init__.py  chart_utils.py  charts_ascii.py  charts_html.py  charts_mermaid.py  cli.py  client.py  date_parser.py  format_dataframe.py  format_html.py  format_json.py  format_markdown.py  format_tree.py  format_utils.py  formatters.py  llm_help.py
skills/visionik/ouracli/tests/: test_all_methods_all_formats.py  test_charts_html.py  test_charts_mermaid.py  test_cli.py  test_client.py  test_coverage_boost.py  test_date_parser.py  test_formatters.py  test_formatters_extended.py  test_fuzz.py  test_output_snapshots.py
skills/visionik/ouracli/tests/fixtures/: activity_2024-12-01_to_2024-12-14.json  activity_recent_14days.json  heartrate_2024-11-01_to_2024-11-03.json  heartrate_recent_3days.json  personal_info.json  readiness_recent_14days.json  sleep_recent_14days.json  spo2_recent_14days.json  stress_recent_14days.json  workout_recent_14days.json
(+1989 files in other folders)
