[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-icalendar-sync"
version = "2.2.30"
description = "Professional iCloud Calendar integration for OpenClaw agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Black_Temple", email = "contact@clawhub.ai"}
]
keywords = ["openclaw", "calendar", "icloud", "caldav", "iphone", "scheduling", "ai-agent", "multi-agent", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/h8kxrfp68z-lgtm/OpenClaw"
Documentation = "https://github.com/h8kxrfp68z-lgtm/OpenClaw/tree/skills/skills/icalendar-sync"
Repository = "https://github.com/h8kxrfp68z-lgtm/OpenClaw"
Issues = "https://github.com/h8kxrfp68z-lgtm/OpenClaw/issues"

[project.scripts]
icalendar-sync = "icalendar_sync.calendar:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
