[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawback"
version = "1.0.14"
description = "Congressional Trade Mirror Bot - Automatically mirror congressional stock trades"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ClawBack Team"}
]
keywords = ["trading", "stocks", "congress", "automation", "etrade"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
    "pdfplumber>=0.9.0",
    "beautifulsoup4>=4.11.0",
    "pandas>=1.5.0",
    "yfinance>=0.2.0",
    "schedule>=1.2.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
selenium = [
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
clawback = "clawback.cli:main"

[project.urls]
Homepage = "https://github.com/mainfraame/clawback"
Repository = "https://github.com/mainfraame/clawback"
Issues = "https://github.com/mainfraame/clawback/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clawback = ["*.json", "*.template.json"]
